--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>ChainsofReasoning by iesl</title>
+    <title>ChainsofReasoning by rajarshd</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -18,13 +18,13 @@
         <h1>ChainsofReasoning</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/iesl/ChainsofReasoning">View the Project on GitHub <small>iesl/ChainsofReasoning</small></a></p>
+        <p class="view"><a href="https://github.com/rajarshd/ChainsofReasoning">View the Project on GitHub <small>rajarshd/ChainsofReasoning</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/iesl/ChainsofReasoning/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/iesl/ChainsofReasoning/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/iesl/ChainsofReasoning">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/rajarshd/ChainsofReasoning/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/rajarshd/ChainsofReasoning/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/rajarshd/ChainsofReasoning">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -52,7 +52,7 @@ Recurrent Neural Networks</a></p>
 <h3>
 <a id="data" class="anchor" href="#data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Data</h3>
 
-<p>Get the data from <a href="http://iesl.cs.umass.edu/downloads/akbc16/">here</a>. (Note: This might change soon, as I will release an updated version of the dataset)</p>
+<p>Get the data from <a href="http://rajarshd.cs.umass.edu/downloads/akbc16/">here</a>. (Note: This might change soon, as I will release an updated version of the dataset)</p>
 
 <p>To get the correct format to run the models, </p>
 
@@ -83,7 +83,7 @@ Recurrent Neural Networks</a></p>
 <p>Feel free to email me with any questions you have at <a href="mailto:rajarshi@cs.umass.edu">rajarshi@cs.umass.edu</a></p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/iesl">iesl</a></p>
+        <p>This project is maintained by <a href="https://github.com/rajarshd">rajarshd</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
