--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Recurrent Neural Networks</a></p>
 <h3>
 <a id="data" class="anchor" href="#data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Data</h3>
 
-<p>Get the data from <a href="http://rajarshd.cs.umass.edu/downloads/akbc16/">here</a>. (Note: This might change soon, as I will release an updated version of the dataset)</p>
+<p>Get the data from <a href="http://iesl.cs.umass.edu/downloads/akbc16/">here</a>. (Note: This might change soon, as I will release an updated version of the dataset)</p>
 
 <p>To get the correct format to run the models, </p>
 
@@ -67,7 +67,7 @@ Recurrent Neural Networks</a></p>
 <h3>
 <a id="model" class="anchor" href="#model" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Model</h3>
 
-<p>To start training, first checkout <a href="run_scripts/config.sh">run_scripts/config.sh</a>. This defines all the hyperparams and other inputs to the network. After specifying model parameters, to start training run,</p>
+<p>To start training, first checkout <a href="https://github.com/rajarshd/ChainsofReasoning/tree/master/run_scripts/config.sh">run_scripts/config.sh</a>. This defines all the hyperparams and other inputs to the network. After specifying model parameters, to start training run,</p>
 
 <div class="highlight highlight-source-shell"><pre><span class="pl-c1">cd</span> run_sripts
 /bin/bash train.sh ./config.sh</pre></div>
@@ -75,7 +75,7 @@ Recurrent Neural Networks</a></p>
 <h3>
 <a id="path-query-experiment-on-wordnet-sec-55-of-the-paper" class="anchor" href="#path-query-experiment-on-wordnet-sec-55-of-the-paper" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Path Query Experiment on WordNet (Sec 5.5 of the paper)</h3>
 
-<p>Checkout the instructions of the readme page in <a href="wordnet_experiment/README.md">wordnet_experiment/README.md</a>.</p>
+<p>Checkout the instructions of the readme page in <a href="wordnet_experiment/README.md">https://github.com/rajarshd/ChainsofReasoning/tree/master/wordnet_experiment/README.md</a>.</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact:</h3>
