--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ across all relations. On a largescale Freebase+ClueWeb prediction task, we achie
 <h3>
 <a id="path-query-experiment-on-wordnet-sec-55-of-the-paper" class="anchor" href="#path-query-experiment-on-wordnet-sec-55-of-the-paper" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Path Query Experiment on WordNet (Sec 5.5 of the paper)</h3>
 
-<p>Checkout the instructions of the readme page in <a href="wordnet_experiment/README.md">https://github.com/rajarshd/ChainsofReasoning/tree/master/wordnet_experiment/README.md</a>.</p>
+<p>Checkout the instructions of the readme page in <a href="https://github.com/rajarshd/ChainsofReasoning/tree/master/wordnet_experiment/README.md">wordnet_experiment/README.md</a>.</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact:</h3>
